# permissible_server

./: Cargo.toml  Dockerfile  sample.env
.github/: dependabot.yml
migrations/2019-08-04-211403_create_users/: up.sql
src/: jwt.rs  lib.rs  main.rs
src/database/: mod.rs  models.rs
src/graphql/: context.rs  mod.rs  mutation.rs  query.rs  user.rs
