[package]
name = "permissible_server"
version = "0.1.0"
authors = ["Permissible"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
hyper = "0.12"
jsonwebtoken = "6.0"
juniper = "0.13"
juniper_hyper = "0.4"
log = "0.4"
pretty_env_logger = "0.3"
futures-timer = "0.3"
tokio = "0.1"
tokio-core = "0.1"
diesel = { version = "1.4.7", features = ["r2d2", "sqlite"] }
dotenv = "0.14"
serde = "1.0"
serde_derive = "1.0"
uuid = { version = "0.7", features = ["v4"] }
